Fix overflow issue

--- a/app/assets/stylesheets/components/sidenav.scss
+++ b/app/assets/stylesheets/components/sidenav.scss
@@ -10,7 +10,7 @@ $index-gray: #cac4c9;
   flex-direction: column;
   min-width: 220px;
   height: 100vh;
-  overflow: scroll;
+  overflow: hidden;
 
   background-color: $index-purple;
   color: $index-gray;
